fix: corrigir dependências do Google API e compatibilidade Java para o deploy